# digital-payments-python-sdk

./: README.md  pyproject.toml
doc/: client.md
doc/auth/: custom-header-signature-1.md  custom-header-signature.md
doc/controllers/: digital-payment-enablement.md  fueling.md  partner-notification.md  shell-api-platform-security-authentication.md  station-locator.md
doc/models/: access-token-response.md  around-location-array.md  datum.md  detail.md  device-detail.md  fault.md  finalise-fueling-request.md  loc.md  mpp-acces-token-response.md  oauth-token-post-request-body.md  opening-hour.md  partner-token-request-body.md  payment-details.md  payment.md  prepare-fueling-request.md  product.md
shellev/: configuration.py  shellev_client.py
shellev/controllers/: digital_payment_enablement_controller.py  fueling_controller.py  partner_notification_controller.py  shell_api_platform_security_authentication_controller.py  station_locator_controller.py
shellev/exceptions/: access_token_error_exception.py  cancel_fueling_error_response_error_exception.py  mpp_acces_token_error_response_exception.py  payment_enablement_error_response_exception.py  station_locator_bad_request_exception.py  station_locator_forbidden_exception.py  station_locator_internal_server_error_exception.py  station_locator_not_found_exception.py  station_locator_unauthorized_exception.py
shellev/models/: access_token_response.py  around_location_array.py  mpp_error.py  (+24 more)
shellsmartpayapi/: __init__.py  api_helper.py  configuration.py  shellsmartpayapi_client.py
tests/: http_response_catcher.py
(+56 files in other folders)
